Fix styling for transaction type Debit button to enhance readability

--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -213,3 +213,17 @@ a.has-text-white.sortable {
 .control.has-icons-left {
   position: relative;
 }
+
+// Transaction type button styling - make text darker when outlined
+[data-controller='trxtype-radio-buttons'] {
+  .button.is-outlined {
+    // Make text darker for better readability when button is not selected
+    color: #4a4a4a !important;
+    font-weight: 600;
+
+    // Ensure hover state also has good contrast
+    &:hover {
+      color: #363636 !important;
+    }
+  }
+}
